# agentic-hyperliquid

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: deploy-scraper.yml  deploy.yml
docs/superpowers/plans/: 2026-06-18-account-command.md  2026-06-18-agent-hyperliquid-telegram-bot.md  2026-06-18-cicd-deploy.md  2026-06-18-hyperliquid-bot-api.md  2026-06-18-telegram-config-entry-modes.md  2026-06-19-bracket-leg-min-notional.md  2026-06-19-execution-close-notifications.md  2026-06-19-pnl-push-monitoring.md  2026-06-19-trigger-entry.md  2026-06-20-cancel-resting-limit-button.md  2026-06-26-close-positions.md  (+4 more)
k8s/: README.md  bot-service.yaml  deployment.yaml  namespace.yaml  pvc.yaml  scraper-deployment.yaml
scraper/: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  package-lock.json  package.json  tsconfig.json
scraper/src/: botApi.ts  config.ts  extract.test.ts  extract.ts  hyperliquid.ts  index.ts  login.ts  loop.ts  marketData.test.ts  marketData.ts  neurobro.ts  notify.ts  quota.ts  trigger.test.ts  trigger.ts
scraper/test/: botApi.test.ts  config.test.ts  extract.test.ts  hyperliquid.test.ts  loop.test.ts  notify.test.ts  quota.test.ts
scripts/: bootstrap-k8s.sh  check-equity.sh  send-signal.sh  update-secret.sh
src/: breakeven.rs  config.rs  ingest.rs  journal.rs  llm_parser.rs  main.rs  manual_scan_store.rs  monitor.rs  parser.rs  risk.rs  settings.rs  sizing.rs  state.rs  stats.rs  telegram.rs  trigger_store.rs
src/api/: auth.rs  mod.rs  trades.rs
src/hyperliquid/: mod.rs
(+16 files in other folders)
