[package]
name = "agentic-hyperliquid"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
teloxide = { version = "0.13", features = ["macros"] }
hyperliquid_rust_sdk = "0.6"
ethers = { version = "2.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
